Fixed github star button spacing.

--- a/packages/inkline.io/pages/index.scss
+++ b/packages/inkline.io/pages/index.scss
@@ -96,7 +96,7 @@
             }
         }
 
-        .header-button {
+        .header-buttons {
             display: flex;
             align-items: center;
 
@@ -112,6 +112,10 @@
                 .button {
                     margin-bottom: $spacer;
                 }
+            }
+
+            .github-star-button {
+                padding-top: 5px;
             }
         }
     }
